# src/main/java/com/example/bankcards/dto/request/CreateUserRequestDto.java
@@ -1,0 +1,11 @@
+package com.example.bankcards.dto.request;
+
+import lombok.Data;
+
+@Data
+public class CreateUserRequestDto {
+
+    private String login;
+
+    private String password;
+}
